@@ -1,8 +1,8 @@
 #!/usr/bin/env python3
 # coding=UTF-8
 # Author: Tiago Eduardo Zacarias
-# Version: 1.4.0
-# Date: 29-04-2025
+# Version: 1.4.1
+# Date: 12-02-2026
 # License: GPLv3
 
 
@@ -16,16 +16,17 @@ CISCO = [
     "192.168.2.16",
     "192.168.2.17",
     "192.168.2.18",
-    "192.168.2.19",
-    "192.168.2.23",
-    "192.168.2.24",
-    "192.168.2.25"
-]
+    "192.168.2.19"
 
+]
 
 HUAWEI = [
     "192.168.2.21",
     "192.168.2.22"
+]
+
+LINUX = [
+    "10.12.0.100"
 ]
 
 
