@@ -4,3 +4,4 @@
 2020-03-25 (Tiago Zacarias): Change in version 1.3.0 | Restructured - Reduced amount of loops
 2021-01-09 (Tiago Zacarias): Change script to language python3
 2025-04-17 (Tiago Zacarias): Change in version 1.4.0 | Change Module Automation from expect to netmiko
+2026-02-13 (Tiago Zacarias): Change in version 1.4.1 | Include device-type linux
